--- a/gallery/style.css
+++ b/gallery/style.css
@@ -19,6 +19,7 @@ body {
 
 .container {
     max-width: 1000px;
+    background-color: white;
 }
 
 .footer {
@@ -112,8 +113,14 @@ img {
 }
 
 .gallery {
-    width: 900px;
+    width: 1000px;
     min-height: calc(100vh - 120px);
+    background: lightgray;
+}
+
+.row {
+    width: 900px;
+    margin: auto;
 }
 
 img:hover {
