--- a/gallery/style.css
+++ b/gallery/style.css
@@ -117,13 +117,15 @@ img {
 .gallery {
     width: 1000px;
     min-height: calc(100vh - 120px);
-    position: relative;
 }
 
 .gallery h1 {
     opacity: 1;
     text-align: center;
     color: #5E5B57;
+    margin-top: 3%;
+    margin-bottom: 3%;
+
 }
 
 .row {
