--- a/style.css
+++ b/style.css
@@ -72,29 +72,45 @@ body {
 
 .jumbotron {
     background-image: url(http://1.bp.blogspot.com/-NAYokHyXzV0/VnvynY3rxoI/AAAAAAAAJz4/IFkk-fyy9Eg/s1600/Martial%2Barts.jpg);
-    
     height: calc(100vh - 120px);
     background-size: cover;
     background-repeat: no-repeat;
-    color: #A2763C;
-    text-shadow: #15130F 0.3em 0.4em 0.4em;
+    text-shadow: #15130F 0.4em 0.4em 0.4em;
     background-position: center;
     overflow: hidden;
+    
 }
 
 .jumbotron>h1 {
-    float: right;
-    text-align: center;
     font-weight: bold;
-    padding: 7%;
+    padding: 1% 9%;
+    left: 50%;
+    top: 13%;
+    color: #B66933;
+    animation-name: heading1;
+    animation-duration: 3s;
+    position: fixed;
+}
+
+@keyframes heading1 {
+    0% {top: -15%;} 
+    100% {top: 13%;} 
 }
 
 .jumbotron>h3 {   
     position: fixed;
     left: 20%;
     bottom: 10%;
-    color: #A2763C;
-    text-shadow: red 0.1em 0.1em 0.1em;
+    color: #865330;
+    text-shadow: #B66933 0.2em 0.3em 0.3em;
+    animation-name: heading3;
+    animation-duration: 4s
+}
+
+@keyframes heading3 {
+    0% {left: -25%;} 
+    50% {left: 10%; transform: rotateY(180deg);}
+    100% {left: 20%;} 
 }
 
 .nav>ul>li>ul>li {
@@ -102,8 +118,7 @@ body {
     background: #49102D;
     width: 100%;
     height: 40px;
-    line-height: 40px;
-    
+    line-height: 40px; 
 }
 
 .nav li:hover ul li {
@@ -111,25 +126,106 @@ body {
     position: grid;
 }
 
-button {
+.jumbotron>button {
     border-radius: 50%;
     width: 60px;
     height: 60px;
-    margin-left: 59.5%;
-    margin-top: 17%;
+    margin-left: 38.7%;
+    margin-top: 22%;
     background-color: rgba(255,255,0, 0.2);
     background-size: 150%;
+    transition-property: all;
+    transition-duration: 2s;
     transition: 2s;
     cursor: pointer;
+    position: fixed;
+    animation-name: buttonAnimation;
+    animation-duration: 4s;
+}
+
+@keyframes buttonAnimation {
+    0% {background-color: rgba(250,255,0, 0.3); right: -150px; top: -250px; }
+    10% {background-color: rgba(199,235,129, 0.4); right: 10px; top: -150px; }
+    15% {background-color: rgba(163,191,163, 0.5); right: 55px; top: -120px; transform: rotateY(180deg)}
+    20% {background-color: rgba(133,171,99, 0.5); right: 100px; top: -200px; }
+    25% {background-color: rgba(163,161,43, 0.5); right: 150px; top: -210px; }
+    30% {background-color: rgba(235,132,29, 0.6); right: 250px; top: -220px; }
+    35% {background-color: rgba(223,141,123, 0.5); right: 220px; top: -205px; }
+    40% {background-color: rgba(255,155,200, 0.7); right: 290px; top: -230px; }
+    50% {background-color: rgba(227,32,32, 0.8); right: 340px; top: -180px; border-radius: 50% 50% 50%; }
+    60% {background-color: rgba(255,255,250, 0.7); right: 155px; top: 25px; }
+    70% {background-color: rgba(255,255,150, 0.5); right: 120px; top: -10px; }
+    80% {background-color: rgba(255,255,0, 0.4); right: 195px; top: 25px; }
+    90% {background-color: rgba(255,255,150, 0.3); right: 350px; top: 15px; }
+    95% {background-color: rgba(255,255,100, 0.3); right: 300px; top: 5px; }
+    100% {background-color: rgba(255,255,0, 0.2); } 
 }
 
 button:hover {
     background-image: linear-gradient(-50deg, red 30%, yellow 75%);
     background-position: 0% 100%;
     color: white;
+    transition: 3s;
+    display: none;
+    animation-name: restartAnimation;
+    animation-duration: 0s;
+
 }
 
 #main {
     font-size: 20px;
     font-weight: 600;
 }
+
+/*
+.jumbotron>h1 {
+    text-align: center;
+    font-weight: bold;
+    padding: 4%;
+    right: 5%;
+    top: 1%;
+    color: #B66933;
+    animation-name: heading1;
+    animation-duration: 3s;
+    position: absolute;
+}
+
+@keyframes heading1 {
+    0% {top: -25%;} 
+    100% {top: 1%;} 
+}
+
+.jumbotron>h3 {   
+    position: fixed;
+    left: 20%;
+    bottom: 10%;
+    color: #865330;
+    text-shadow: #B66933 0.2em 0.3em 0.3em;
+    animation-name: heading3;
+    animation-duration: 4s;
+}
+
+@keyframes heading3 {
+    0% {left: -25%;} 
+    50% {left: 10%; transform: rotateY(180deg);}
+    100% {left: 20%;} 
+}
+
+button {
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    margin-left: 59.5%;
+    margin-top: 33%;
+    background-color: rgba(255,255,0, 0.2);
+    background-size: 150%;
+    transition-property: all;
+    transition-duration: 2s;
+    transition: 2s;
+    cursor: pointer;
+    position: fixed;
+    animation-name: myanimation;
+    animation-duration: 4s;
+}
+
+*/
